
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jrb.phiitnesstimer.DisplayTypeOne">

    <TextView
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_workout_details"
        android:id="@+id/lblTitle" />

    <TextView
        style="@style/LabelStyle"
        android:layout_below="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_workout"
        android:id="@+id/lblWorkout" />

    <TextView
        style="@style/LabelStyle"
        android:layout_below="@+id/lblWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_text_margin"
        android:text="@string/label_rounds_completed"
        android:id="@+id/lblRoundsCompleted" />

    <TextView
        style="@style/LabelStyle"
        android:layout_below="@+id/lblRoundsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_text_margin"
        android:text="@string/label_work_time"
        android:id="@+id/lblWorkTime" />

    <TextView
        style="@style/LabelStyle"
        android:layout_below="@+id/lblWorkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_text_margin"
        android:text="@string/label_rest_time"
        android:id="@+id/lblRestTime" />

    <ListView
        style="@style/DisplayListStyle"
        android:layout_below="@+id/lblRestTime"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_height"
        android:id="@+id/listRoundSplits" />

    <Button
        style="@style/ButtonStyle"
        android:layout_below="@+id/listRoundSplits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_save_template"
        android:id="@+id/btnSave"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/ButtonStyle"
        android:layout_below="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_back_main"
        android:layout_marginTop="@dimen/button_separate_margin"
        android:id="@+id/btnBackMain"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

