<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.jrb.phiitnesstimer.MainActivity">

        <TextView
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/lblTitle" />

        <TextView
            style="@style/LabelStyle"
            android:layout_below="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_secs_right_margin"
            android:text="@string/label_workout_defaults"
            android:id="@+id/lblDefaults" />

        <!-- Optional Sound Volume-->
        <CheckBox
            style="@style/CheckBoxStyle"
            android:layout_below="@+id/lblDefaults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_sound_volume"
            android:id="@+id/chkSoundVolume" />
        <TextView
            style="@style/VolumeStyle"
            android:layout_width="@dimen/text_box_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_secs_right_margin"
            android:layout_alignTop="@+id/chkSoundVolume"
            android:id="@+id/lblVolume" />

        <!-- Optional Starting Countdown -->
        <CheckBox
            style="@style/CheckBoxStyle"
            android:layout_below="@+id/chkSoundVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_starting_CD"
            android:id="@+id/chkStartingCD" />
        <Spinner
            style="@style/SpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/chkStartingCD"
            android:id="@+id/spinStartingCD" />

        <!-- Optional Time Warning-->
        <CheckBox
            style="@style/CheckBoxStyle"
            android:layout_below="@+id/chkStartingCD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_time_warning"
            android:id="@+id/chkTimeWarning" />
        <EditText
            style="@style/TimeEntryStyle"
            android:layout_alignTop="@+id/chkTimeWarning"
            android:layout_width="@dimen/text_box_width"
            android:layout_height="wrap_content"
            android:hint="@string/text_mins"
            android:layout_marginEnd="@dimen/text_mins_right_margin"
            android:id="@+id/txtTimeWarningMins" />
        <TextView
            style="@style/ColonStyle"
            android:layout_alignTop="@+id/chkTimeWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_colon_right_margin"
            android:id="@+id/lblTimeWarningColon" />
        <EditText
            style="@style/TimeEntryStyle"
            android:layout_alignTop="@+id/chkTimeWarning"
            android:layout_width="@dimen/text_box_width"
            android:layout_height="wrap_content"
            android:hint="@string/text_secs"
            android:layout_marginEnd="@dimen/text_secs_right_margin"
            android:id="@+id/txtTimeWarningSecs" />

        <!-- Optional Time Warning-->
        <CheckBox
            style="@style/CheckBoxStyle"
            android:layout_below="@+id/chkTimeWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_count_UD"
            android:id="@+id/chkCountUD" />
        <Spinner
            style="@style/SpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/chkCountUD"
            android:id="@+id/spinCountUD" />

        <Button
            style="@style/ButtonStyle"
            android:layout_below="@+id/chkCountUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_confirm"
            android:id="@+id/btnConfirm"
            android:layout_centerHorizontal="true" />

        <Button
            style="@style/ButtonStyle"
            android:layout_below="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_separate_margin"
            android:text="@string/action_undo"
            android:id="@+id/btnUndo"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</ScrollView>
